Página Web Amigu-arte

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 .logo-controlado {
-    width: 400px; /* Ancho deseado en píxeles */
+    width: 430px; /* Ancho deseado en píxeles */
     height: auto; /* La altura se ajustará automáticamente para mantener la proporción */
 }
 
@@ -115,6 +115,7 @@ a:hover {
     font-weight: bold;
     text-decoration: none;
     font-family: inherit; 
+    
   }
   
   /* Estilos para el contenido del dropdown */
@@ -202,42 +203,43 @@ li {
     color: #333; 
 }
 
-/* Estilos para el contenedor de las tarjetas */
-.contenedor-tarjetas {
-    display: flex; 
-    flex-wrap: wrap; /* Permite que las tarjetas se envuelvan a la siguiente línea si no caben en una fila */
-    justify-content: center; /* Distribuir el espacio entre las tarjetas */
-    align-items: center;
-    margin: 20px auto; 
+/* Estilos para la lista de productos */
+.lista-productos {
+  list-style: none; /* Elimina los marcadores de lista */
+  padding: 0; /* Elimina el espacio interno de la lista */
+  display: flex; /* Utiliza flexbox para alinear los productos en una fila */
+  flex-wrap: wrap; /* Permite que los productos se envuelvan a la siguiente línea */
+  justify-content: space-between; /* Distribuye los productos uniformemente en la fila */
 }
 
-/* Estilos para las tarjetas */
-.tarjeta {
-    max-width: 300px;
-    border: 2px solid #333;
-    box-shadow: 5px 5px 8px #519fbe, -5px -5px 8px #519fbe; /* Azul intermedio */
-    border-radius: 3px;
-    margin: 20px;
-    text-align: center;
-    background-color: #f7d5d5; /* Rosa pastel */
-    flex: 1; /* Permite que las tarjetas se expandan para llenar el espacio disponible */
-    box-sizing: border-box; /* Incluir el margen y el relleno en el ancho de la tarjeta */
+/* Estilos para cada producto */
+.producto {
+  max-width: 300px; /* Ancho máximo para cada producto */
+  border: 1px solid #ddd; /* Borde del producto */
+  padding: 10px; /* Espacio interno del producto */
+  margin: 10px; /* Margen entre los productos */
+  text-align: center; /* Centra el contenido del producto */
+  background-color: #f7f7f7; /* Fondo del producto */
 }
-  
-  
-  /* Estilos para la imagen dentro de la tarjeta */
-  .imagen-tarjeta  {
-    max-width: 100%;
-    display: flex; /* Usar flexbox para alinear las imágenes horizontalmente */
-  justify-content: center; /* Centrar horizontalmente las imágenes */
+
+/* Estilos para la imagen del producto */
+.producto img {
+  max-width: 100%; /* Ajusta la imagen al ancho del contenedor del producto */
+  height: auto; /* Permite que la altura de la imagen se ajuste proporcionalmente */
+  width: 300px;
+  display: block; /* Elimina cualquier espacio adicional debajo de la imagen */
+  margin: 0 auto; /* Centra la imagen horizontalmente en el contenedor del producto */
 }
-  
-  /* Estilos para el título en la tarjeta */
-  .h2-tarjeta {
-    font-size: 24px; 
-    color: #333; 
-    margin-top: 20px; 
-    margin-bottom: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
+
+/* Estilos para el título del producto */
+.titulo-producto {
+  font-size: 18px; /* Tamaño de fuente para el título */
+  margin: 10px 0; /* Espacio superior e inferior del título */
+  color: #333; /* Color del título */
+}
+
+/* Estilos para la descripción del producto */
+.descripcion-producto {
+  font-size: 14px; /* Tamaño de fuente para la descripción */
+  color: #666; /* Color del texto de la descripción */
+}
