--- a/styleContactame.css
+++ b/styleContactame.css
@@ -26,7 +26,8 @@
   }
   
   #enviar{
-    background-color: var(--color-celeste-pastel);    
+    background-color: var(--color-celeste-pastel);   
+    font-weight: 400;
     padding: 10px 10px;
     border-radius: 5px;
     cursor: pointer;
@@ -34,12 +35,13 @@
     grid-column: span 2;
     grid-row: 4;
     text-align: center;
-    margin: 0 auto;
+    margin: 10px auto;
     align-self: center;
   }
   
   #enviar:hover {
     background-color: var(--color-celeste-h1);
+    color: white;
   }
   
   #comentarios{
