--- a/styleInicio.css
+++ b/styleInicio.css
@@ -73,4 +73,21 @@ h3{
     text-align: center;
 }
 
+.logo-controlado {
+    width: 430px;
+    height: auto;
+}
 
+img.logo-controlado{
+    opacity: 0;
+    animation: aparecer 5s ease forwards;
+}
+
+@keyframes aparecer {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
